Banner And Laptop Img Updated

--- a/case-study/GGTL.IN.html
+++ b/case-study/GGTL.IN.html
@@ -272,7 +272,7 @@
                     <div class="space-50"></div>
                     <div class="row">
                         <div class="col-md-12">
-                            <img src="../images/projects/project-single.jpg" alt="" class="single-project-img">
+                            <img src="../images/CaseStudy/banner2.png" alt="" class="single-project-img">
                         </div>
                     </div>
                     <div class="row">
@@ -287,17 +287,17 @@
                             </blockquote> -->
                             <div class="simple-slider owl-theme owl-carousel">
                                 <div class="projects-slide-item">
+                                    <img src="../images/CaseStudy/Laptopggtl1.png" alt="">
+                                </div>
+                                <div class="projects-slide-item">
+                                    <img src="../images/CaseStudy/Laptopggtl2.png" alt="">
+                                </div>
+                                <!-- <div class="projects-slide-item">
                                     <img src="../images/projects/project-details-s1.png" alt="">
                                 </div>
                                 <div class="projects-slide-item">
                                     <img src="../images/projects/project-details-s2.png" alt="">
-                                </div>
-                                <div class="projects-slide-item">
-                                    <img src="../images/projects/project-details-s1.png" alt="">
-                                </div>
-                                <div class="projects-slide-item">
-                                    <img src="../images/projects/project-details-s2.png" alt="">
-                                </div>
+                                </div> -->
                             </div>
                             <h3>Our Solution:</h3>
                             <p>In response to GGTL.IN's challenges, our team undertook the design and development of a comprehensive website. We focused on creating an engaging and informative platform that effectively conveyed the laboratory's expertise in gem testing. The website incorporated detailed information about their testing procedures, certifications, and the significance of gemstone analysis. A visually appealing design and intuitive navigation were implemented to enhance user experience. Additionally, we integrated a secure and user-friendly contact system to facilitate inquiries and service requests. The website was optimized for mobile responsiveness, ensuring accessibility for users on various devices. The result was a dynamic online presence that not only showcased GGTL.IN's authority in gem testing but also provided an educational and interactive experience for visitors seeking reliable gemstone analysis services.
