--- a/case-study/GVS-Engineers-and-Consultants .html
+++ b/case-study/GVS-Engineers-and-Consultants .html
@@ -291,12 +291,12 @@
                                 <div class="projects-slide-item">
                                     <img src="../images/projects/project-details-s2.png" alt="">
                                 </div>
-                                <div class="projects-slide-item">
+                                <!-- <div class="projects-slide-item">
                                     <img src="../images/projects/project-details-s1.png" alt="">
                                 </div>
                                 <div class="projects-slide-item">
                                     <img src="../images/projects/project-details-s2.png" alt="">
-                                </div>
+                                </div> -->
                             </div>
                             <h3>Our Solution:</h3>
                             <p>To address GVSPMC's challenges, our team initiated the design and development of a tailored website. We focused on creating a visually compelling and informative platform that showcased the company's civil engineering prowess and project management capabilities. The website featured detailed descriptions of their services, highlighted key projects, and provided an overview of their skilled team. To enhance user experience, we incorporated intuitive navigation, ensuring seamless exploration of the company's offerings. Moreover, the website was optimized for responsiveness across various devices, facilitating easy access for users on desktops, tablets, and mobile phones. Our solution not only established GVSPMC's digital presence but also positioned them as a credible and accessible source for potential clients seeking civil engineering consultancy and project management expertise.
