--- a/case-study/Indian-music-therapy-treatment.html
+++ b/case-study/Indian-music-therapy-treatment.html
@@ -292,12 +292,12 @@
                                 <div class="projects-slide-item">
                                     <img src="../images/projects/project-details-s2.png" alt="">
                                 </div>
-                                <div class="projects-slide-item">
+                                <!-- <div class="projects-slide-item">
                                     <img src="../images/projects/project-details-s1.png" alt="">
                                 </div>
                                 <div class="projects-slide-item">
                                     <img src="../images/projects/project-details-s2.png" alt="">
-                                </div>
+                                </div> -->
                             </div>
                             <h3>Our Solution:</h3>
                             <p>To address the challenges faced by Indian Music Therapy Treatment, a part of Natyacharya Schools, our team designed and developed a static website. We focused on creating a visually appealing platform that conveyed the essence and benefits of Indian music therapy treatment. The website included detailed information about the therapeutic approach, the team of experts, and the potential impact of music therapy on well-being. Despite being static, the website offered an informative space for visitors to understand the services provided. It was optimized for responsiveness, ensuring accessibility on various devices. Our solution not only established an online presence for Indian Music Therapy Treatment but also served as an educational and user-friendly platform for individuals seeking information about the therapeutic applications of Indian music. </p>
