--- a/case-study/Pinkparty.html
+++ b/case-study/Pinkparty.html
@@ -288,17 +288,17 @@
                             </blockquote> -->
                             <div class="simple-slider owl-theme owl-carousel">
                                 <div class="projects-slide-item">
+                                    <img src="../images/CaseStudy/LaptopPink1.png" alt="">
+                                </div>
+                                <div class="projects-slide-item">
+                                    <img src="../images/CaseStudy/LaptopPink2.png" alt="">
+                                </div>
+                                <!-- <div class="projects-slide-item">
                                     <img src="../images/projects/project-details-s1.png" alt="">
                                 </div>
                                 <div class="projects-slide-item">
                                     <img src="../images/projects/project-details-s2.png" alt="">
-                                </div>
-                                <div class="projects-slide-item">
-                                    <img src="../images/projects/project-details-s1.png" alt="">
-                                </div>
-                                <div class="projects-slide-item">
-                                    <img src="../images/projects/project-details-s2.png" alt="">
-                                </div>
+                                </div> -->
                             </div>
                             <h3>Our Solution:</h3>
                             <p>To address Pinkparty's challenges, our team undertook the design and development of a comprehensive website. We focused on creating an intuitive and visually engaging platform that showcased the variety of customizable design templates available. The website incorporated clear categories, easy navigation, and a user-friendly interface to facilitate a seamless browsing and purchasing experience. We integrated an efficient customization tool, allowing customers to personalize their chosen templates. The website was optimized for responsiveness across various devices, ensuring accessibility for users on desktops, tablets, and mobile phones. Our solution not only established Pinkparty's online presence but also provided a convenient and enjoyable platform for customers to explore and purchase their creative and customizable event poster design templates.
