--- a/case-study/Ruvazh.html
+++ b/case-study/Ruvazh.html
@@ -287,17 +287,17 @@
                             </blockquote> -->
                             <div class="simple-slider owl-theme owl-carousel">
                                 <div class="projects-slide-item">
+                                    <img src="../images/CaseStudy/Laptopruvazh1.png" alt="">
+                                </div>
+                                <div class="projects-slide-item">
+                                    <img src="../images/CaseStudy/Laptopruvazh2.png" alt="">
+                                </div>
+                                <!-- <div class="projects-slide-item">
                                     <img src="../images/projects/project-details-s1.png" alt="">
                                 </div>
                                 <div class="projects-slide-item">
                                     <img src="../images/projects/project-details-s2.png" alt="">
-                                </div>
-                                <div class="projects-slide-item">
-                                    <img src="../images/projects/project-details-s1.png" alt="">
-                                </div>
-                                <div class="projects-slide-item">
-                                    <img src="../images/projects/project-details-s2.png" alt="">
-                                </div>
+                                </div> -->
                             </div>
                             <h3>Our Solution:</h3>
                             <p>To address Ruvazh's challenges, our team embarked on designing and developing a comprehensive website. We focused on creating a visually stunning and user-friendly platform that effectively showcased the diverse range of jewelry offerings. The website incorporated high-quality images, detailed product descriptions, and clear categorization to enhance the browsing experience. We implemented an intuitive e-commerce system that facilitated easy navigation, product selection, and secure online transactions. Additionally, the website was optimized for responsiveness, ensuring a seamless experience for users on various devices. Our solution not only established Ruvazh's online presence but also provided an elegant and convenient platform for customers to explore, select, and purchase their exquisite jewelry pieces from Geethanjali Gems.
