--- a/case-study/Wateraid-pumps.html
+++ b/case-study/Wateraid-pumps.html
@@ -286,17 +286,17 @@
                             </blockquote> -->
                             <div class="simple-slider owl-theme owl-carousel">
                                 <div class="projects-slide-item">
+                                    <img src="../images/CaseStudy/LaptopWater1.png" alt="">
+                                </div>
+                                <div class="projects-slide-item">
+                                    <img src="../images/CaseStudy/LaptopWater2.png" alt="">
+                                </div>
+                                <!-- <div class="projects-slide-item">
                                     <img src="../images/projects/project-details-s1.png" alt="">
                                 </div>
                                 <div class="projects-slide-item">
                                     <img src="../images/projects/project-details-s2.png" alt="">
-                                </div>
-                                <div class="projects-slide-item">
-                                    <img src="../images/projects/project-details-s1.png" alt="">
-                                </div>
-                                <div class="projects-slide-item">
-                                    <img src="../images/projects/project-details-s2.png" alt="">
-                                </div>
+                                </div> -->
                             </div>
                             <h3>Our Solution:</h3>
                             <p>To address Wateraid Pumps' challenges, our team took on the design and development of a comprehensive website. We focused on creating a visually appealing and technically informative platform that effectively communicated the features and applications of their pumps and motors. The website incorporated a detailed product catalog, technical specifications, and case studies to highlight the company's expertise. We implemented clear navigation and interactive elements to enhance the user experience. The website was optimized for responsiveness across various devices, ensuring accessibility for users on desktops, tablets, and mobile phones. Our solution not only established Wateraid Pumps' online presence but also provided a valuable resource for clients and partners seeking reliable information about their products and services in the pumping industry.
