--- a/case-study/feng-international.html
+++ b/case-study/feng-international.html
@@ -272,7 +272,7 @@
                     <div class="space-50"></div>
                     <div class="row">
                         <div class="col-md-12">
-                            <img src="../images/projects/project-single.jpg" alt="" class="single-project-img">
+                            <img src="../images/CaseStudy/banner1.png" alt="" class="single-project-img">
                         </div>
                     </div>
                     <div class="row">
@@ -290,12 +290,12 @@
                                 <div class="projects-slide-item">
                                     <img src="../images/projects/project-details-s2.png" alt="">
                                 </div>
-                                <div class="projects-slide-item">
+                                <!-- <div class="projects-slide-item">
                                     <img src="../images/projects/project-details-s1.png" alt="">
                                 </div>
                                 <div class="projects-slide-item">
                                     <img src="../images/projects/project-details-s2.png" alt="">
-                                </div>
+                                </div> -->
                             </div>
                             <h3>Our Solution:</h3>
                             <p>In response to Feng International's challenges, our team took on the task of designing and developing a robust website. We focused on creating a platform that effectively communicated the company's expertise, range of services, and global logistics capabilities. The website featured detailed information about their shipping solutions, tracking services, and customer support mechanisms. A user-friendly interface and clear navigation were implemented to enhance the overall user experience. Additionally, we ensured the website's responsiveness across various devices, allowing clients to access vital information seamlessly. By integrating a visually appealing design with informative content, our solution provided Feng International with a dynamic online presence that not only showcased their logistical prowess but also facilitated effective communication with their target audience.</p>
