--- a/case-study/grids-global.html
+++ b/case-study/grids-global.html
@@ -272,7 +272,7 @@
                     <div class="space-50"></div>
                     <div class="row">
                         <div class="col-md-12">
-                            <img src="../images/projects/project-single.jpg" alt="" class="single-project-img">
+                            <img src="../images/CaseStudy/banner2.png" alt="" class="single-project-img">
                         </div>
                     </div>
                     <div class="row">
@@ -285,17 +285,17 @@
                             </blockquote> -->
                             <div class="simple-slider owl-theme owl-carousel">
                                 <div class="projects-slide-item">
+                                    <img src="../images/CaseStudy/LaptopGrid1.png" alt="">
+                                </div>
+                                <div class="projects-slide-item">
+                                    <img src="../images/CaseStudy/LaptopGrid2.png" alt="">
+                                </div>
+                                <!-- <div class="projects-slide-item">
                                     <img src="../images/projects/project-details-s1.png" alt="">
                                 </div>
                                 <div class="projects-slide-item">
                                     <img src="../images/projects/project-details-s2.png" alt="">
-                                </div>
-                                <div class="projects-slide-item">
-                                    <img src="../images/projects/project-details-s1.png" alt="">
-                                </div>
-                                <div class="projects-slide-item">
-                                    <img src="../images/projects/project-details-s2.png" alt="">
-                                </div>
+                                </div> -->
                             </div>
                             <h3>Our Solution:</h3>
                             <p>In response to Grids Global's challenges, our team embarked on the revamping of their website interface. We focused on creating a visually captivating and user-friendly platform that showcased the company's creative prowess. The revamped design incorporated high-quality visuals, an intuitive layout, and an organized portfolio to effectively highlight their diverse animation and design projects. Additionally, we implemented interactive elements and multimedia features to engage visitors and provide a dynamic user experience. The website was optimized for responsiveness across various devices, ensuring seamless access for users on desktops, tablets, and mobile phones. By combining a visually appealing design with enhanced functionality, our solution not only revitalized Grids Global's online presence but also positioned them as a leading player in the competitive animation and design industry.</p>
