--- a/case-study/pacderm-vision.html
+++ b/case-study/pacderm-vision.html
@@ -272,7 +272,7 @@
                     <div class="space-50"></div>
                     <div class="row">
                         <div class="col-md-12">
-                            <img src="../images/projects/project-single.jpg" alt="" class="single-project-img">
+                            <img src="../images/CaseStudy/banner1.png" alt="" class="single-project-img">
                         </div>
                     </div>
                     <div class="row">
@@ -285,17 +285,12 @@
                             </blockquote> -->
                             <div class="simple-slider owl-theme owl-carousel">
                                 <div class="projects-slide-item">
-                                    <img src="../images/projects/project-details-s1.png" alt="">
+                                    <img src="../images/CaseStudy/LaptopPacderm1.png" alt="">
                                 </div>
                                 <div class="projects-slide-item">
-                                    <img src="../images/projects/project-details-s2.png" alt="">
+                                    <img src="../images/CaseStudy/LaptopPacderm2.png" alt="">
                                 </div>
-                                <div class="projects-slide-item">
-                                    <img src="../images/projects/project-details-s1.png" alt="">
-                                </div>
-                                <div class="projects-slide-item">
-                                    <img src="../images/projects/project-details-s2.png" alt="">
-                                </div>
+                                
                             </div>
                             <h3>Our Solution:</h3>
                             <p>In response to Pacderm Vision's challenges, our team took on the task of designing and developing a comprehensive website. We focused on creating a user-friendly interface that effectively highlighted the diverse range of medical equipment and services offered by the client. The website incorporated detailed product listings, accompanied by relevant specifications and features. To ensure a seamless experience, we implemented easy navigation and a clear structure, enabling visitors to explore the product catalog effortlessly. Additionally, a mobile-responsive design was employed to cater to users accessing the website on various devices. The result was a dynamic online showcase that not only showcased Pacderm Vision's commitment to providing high-quality medical equipment but also facilitated enhanced engagement with their target audience in Kuala Lumpur and beyond.
