--- a/case-study/sriganesam .html
+++ b/case-study/sriganesam .html
@@ -272,7 +272,7 @@
                     <div class="space-50"></div>
                     <div class="row">
                         <div class="col-md-12">
-                            <img src="../images/projects/project-single.jpg" alt="" class="single-project-img">
+                            <img src="../images/CaseStudy/banner1.png" alt="" class="single-project-img">
                         </div>
                     </div>
                     <div class="row">
@@ -287,17 +287,17 @@
                             </blockquote> -->
                             <div class="simple-slider owl-theme owl-carousel">
                                 <div class="projects-slide-item">
+                                    <img src="../images/CaseStudy/LaptopSriganesam1.png" alt="">
+                                </div>
+                                <div class="projects-slide-item">
+                                    <img src="../images/CaseStudy/LaptopSriganesam2.png" alt="">
+                                </div>
+                                <!-- <div class="projects-slide-item">
                                     <img src="../images/projects/project-details-s1.png" alt="">
                                 </div>
                                 <div class="projects-slide-item">
                                     <img src="../images/projects/project-details-s2.png" alt="">
-                                </div>
-                                <div class="projects-slide-item">
-                                    <img src="../images/projects/project-details-s1.png" alt="">
-                                </div>
-                                <div class="projects-slide-item">
-                                    <img src="../images/projects/project-details-s2.png" alt="">
-                                </div>
+                                </div> -->
                             </div>
                             <h3>Our Solution:</h3>
                             <p>In response to Sriganesam's challenges, our team embarked on designing and developing a customized website. We focused on creating a visually appealing and user-friendly online store that effectively highlighted the distinct categories of antique and organic products. The website incorporated an intuitive navigation system, allowing visitors to explore the diverse product offerings effortlessly. To enhance the shopping experience, we implemented a secure and streamlined checkout process. Additionally, the website was optimized for mobile responsiveness to cater to users accessing it on various devices. By integrating a visually engaging design with robust e-commerce functionalities, our solution provided Sriganesam with a dynamic online platform that not only showcased their unique products but also offered a seamless and enjoyable shopping experience for their customers.</p>
