--- a/case-study/sunstar-matrimony.html
+++ b/case-study/sunstar-matrimony.html
@@ -272,7 +272,7 @@
                     <div class="space-50"></div>
                     <div class="row">
                         <div class="col-md-12">
-                            <img src="../images/projects/project-single.jpg" alt="" class="single-project-img">
+                            <img src="../images/CaseStudy/banner2.png" alt="" class="single-project-img">
                         </div>
                     </div>
                     <div class="row">
@@ -284,17 +284,17 @@
                                 <cite>– Herbert Bayard Swope</cite></p>
                             </blockquote> -->
                             <div class="simple-slider owl-theme owl-carousel">
-                                <div class="projects-slide-item">
+                                <!-- <div class="projects-slide-item">
                                     <img src="../images/projects/project-details-s1.png" alt="">
                                 </div>
                                 <div class="projects-slide-item">
                                     <img src="../images/projects/project-details-s2.png" alt="">
+                                </div> -->
+                                <div class="projects-slide-item">
+                                    <img src="../images/CaseStudy/Laptopsunstar1.png" alt="">
                                 </div>
                                 <div class="projects-slide-item">
-                                    <img src="../images/projects/project-details-s1.png" alt="">
-                                </div>
-                                <div class="projects-slide-item">
-                                    <img src="../images/projects/project-details-s2.png" alt="">
+                                    <img src="../images/CaseStudy/Laptopsunstar2.png" alt="">
                                 </div>
                             </div>
                             <h3>Our Solution:</h3>
