--- a/case-study/truzt-organic.html
+++ b/case-study/truzt-organic.html
@@ -272,7 +272,7 @@
                     <div class="space-50"></div>
                     <div class="row">
                         <div class="col-md-12">
-                            <img src="../images/projects/project-single.jpg" alt="" class="single-project-img">
+                            <img src="../images/CaseStudy/banner1.png" alt="" class="single-project-img">
                         </div>
                     </div>
                     <div class="row">
@@ -285,17 +285,17 @@
                             </blockquote> -->
                             <div class="simple-slider owl-theme owl-carousel">
                                 <div class="projects-slide-item">
+                                    <img src="../images/CaseStudy/LaptopTruzt1.png" alt="">
+                                </div>
+                                <div class="projects-slide-item">
+                                    <img src="../images/CaseStudy/LaptopTruzt2.png" alt="">
+                                </div>
+                                <!-- <div class="projects-slide-item">
                                     <img src="../images/projects/project-details-s1.png" alt="">
                                 </div>
                                 <div class="projects-slide-item">
                                     <img src="../images/projects/project-details-s2.png" alt="">
-                                </div>
-                                <div class="projects-slide-item">
-                                    <img src="../images/projects/project-details-s1.png" alt="">
-                                </div>
-                                <div class="projects-slide-item">
-                                    <img src="../images/projects/project-details-s2.png" alt="">
-                                </div>
+                                </div> -->
                             </div>
                             <h3>Our Solution:</h3>
                             <p>To address Truzt Organic's challenges, our team initiated the design and development of a comprehensive website. We focused on creating a visually appealing and informative platform that highlighted the unique aspects of their organic vitamin extraction process and showcased their product range. The website included detailed product descriptions, benefits, and educational content to engage and inform visitors. We implemented a user-friendly interface with clear navigation, ensuring an intuitive experience for potential customers. Additionally, the website was designed to be responsive across various devices, providing accessibility to users on desktops, tablets, and mobile phones. Our solution not only established Truzt Organic's online presence but also served as a valuable resource for consumers seeking organic vitamin products, contributing to increased brand awareness and customer engagement.
