--- a/case-study/vcare.html
+++ b/case-study/vcare.html
@@ -272,7 +272,7 @@
                     <div class="space-50"></div>
                     <div class="row">
                         <div class="col-md-12">
-                            <img src="../images/projects/project-single.jpg" alt="" class="single-project-img">
+                            <img src="../images/CaseStudy/banner1.png" alt="" class="single-project-img">
                         </div>
                     </div>
                     <div class="row">
@@ -285,17 +285,17 @@
                             </blockquote> -->
                             <div class="simple-slider owl-theme owl-carousel">
                                 <div class="projects-slide-item">
+                                    <img src="../images/CaseStudy/LaptopVcare1.png" alt="">
+                                </div>
+                                <div class="projects-slide-item">
+                                    <img src="../images/CaseStudy/LaptopVcare2.png" alt="">
+                                </div>
+                                <!-- <div class="projects-slide-item">
                                     <img src="../images/projects/project-details-s1.png" alt="">
                                 </div>
                                 <div class="projects-slide-item">
                                     <img src="../images/projects/project-details-s2.png" alt="">
-                                </div>
-                                <div class="projects-slide-item">
-                                    <img src="../images/projects/project-details-s1.png" alt="">
-                                </div>
-                                <div class="projects-slide-item">
-                                    <img src="../images/projects/project-details-s2.png" alt="">
-                                </div>
+                                </div> -->
                             </div>
                             <h3>Our Solution:</h3>
                             <p>In response to VCare's challenges, our team provided outsourced development resources for their website project. Leveraging our expertise, we worked closely with VCare to understand their brand, products, and target audience. Our solution involved the creation of a customized website that highlighted VCare's hair and skin clinical products through visually appealing design and intuitive navigation. We ensured the incorporation of an e-commerce platform for seamless product browsing and online purchases. The outsourced development resources allowed VCare to benefit from specialized skills, ensuring the website's functionality and responsiveness across various devices. This collaborative approach not only addressed VCare's initial challenges but also positioned them with a professionally crafted online platform to effectively showcase and sell their clinical products.</p>
