--- a/case-study/nattuvangam-courses.html
+++ b/case-study/nattuvangam-courses.html
@@ -293,12 +293,12 @@
                                 <div class="projects-slide-item">
                                     <img src="../images/projects/project-details-s2.png" alt="">
                                 </div>
-                                <div class="projects-slide-item">
+                                <!-- <div class="projects-slide-item">
                                     <img src="../images/projects/project-details-s1.png" alt="">
                                 </div>
                                 <div class="projects-slide-item">
                                     <img src="../images/projects/project-details-s2.png" alt="">
-                                </div>
+                                </div> -->
                             </div>
                             <h3>Our Solution:</h3>
                             <p>To address the challenges faced by Nattuvangam Courses, a part of Natyacharya Schools, our team designed and developed a static website. We focused on creating a visually appealing platform that highlighted the significance of Nattuvangam in dance and provided detailed information about their courses. The website featured clear course descriptions, faculty details, and a concise overview of the learning experience. Despite being static, the website offered an engaging space for potential students to explore the offerings. It was optimized for responsiveness, ensuring accessibility on various devices. Our solution not only established an online presence for Nattuvangam Courses but also served as an informative and user-friendly platform for individuals interested in enrolling in dance classes in Chennai.
