--- a/case-study/natyacharya-schools.html
+++ b/case-study/natyacharya-schools.html
@@ -272,7 +272,7 @@
                     <div class="space-50"></div>
                     <div class="row">
                         <div class="col-md-12">
-                            <img src="../images/projects/project-single.jpg" alt="" class="single-project-img">
+                            <img src="../images/CaseStudy/banner1.png" alt="" class="single-project-img">
                         </div>
                     </div>
                     <div class="row">
@@ -285,10 +285,10 @@
                             </blockquote> -->
                             <div class="simple-slider owl-theme owl-carousel">
                                 <div class="projects-slide-item">
-                                    <img src="../images/CaseStudy/LaptopNatyacharyaSchool1.png" alt="">
+                                    <img src="../images/CaseStudy/LaptopNatya1.png" alt="">
                                 </div>
                                 <div class="projects-slide-item">
-                                    <img src="../images/CaseStudy/LaptopNatyacharyaSchool2.png" alt="">
+                                    <img src="../images/CaseStudy/LaptopNatya2.png" alt="">
                                 </div>
                                 
                             </div>
